@@ -1,4 +1,8 @@
 2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/amutil.c (parse_crc): Set to 0 on error.
+	* perl/Amanda/Restore.pm: Modify a copy of the header
+
+2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* application-src/amsuntar.pl: Typo
 
 2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
